# engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/models/: sphere.gltf
resources/shaders/: blend.fs  blinn.fs  bloom_downsample.comp  bloom_downsample_hq.comp  bloom_upsample.comp  deferred.fs  geometry.fs  geometry.vs  irradiance.fs  irradiance.vs  lighting.fs  lighting.vs  motion_blur.comp  point_light.fs  point_light.vs  point_light_id.frag  probe.fs  probe.vs  sh_project.comp  sh_reduce.comp  shader.fs  shader.vs  shadow_map.geom  shadow_map.vs  shadow_omni.frag  shadow_omni.vert  sharpen.comp  skybox.fs  skybox.vs  ssao.fs  ssao_blur.fs  ssr.fs  taa_resolve.comp  tone_map_histogram.comp  tone_map_reduction.comp  tonemap.fs  toon.fs  volumetric.comp  volumetric_blur.comp  volumetric_point_light.frag  (+2 more)
resources/shaders/include/: common.h  math.h  pbs.h  shadow.h  uniforms.h
src/: camera.cpp  camera.hpp  constants.hpp  editor.cpp  editor.hpp  entity.cpp  entity.hpp  error.hpp  importer.cpp  importer.hpp  logger.cpp  logger.hpp  main.cpp  math.cpp  math.hpp  model.cpp  model.hpp  pass.hpp  primitives.hpp  profiler.cpp  profiler.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  transform.cpp  transform.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src/passes/: bloom.cpp  bloom.hpp  forward.cpp  forward.hpp  geometry.cpp  geometry.hpp  lighting.cpp  lighting.hpp  shadow.cpp  shadow.hpp  ssao.cpp  ssao.hpp  tone_map.cpp  tone_map.hpp
src/renderer/: buffer.cpp  buffer.hpp  context.hpp  light.cpp  light.hpp  pass.hpp  probe_buffer.cpp  probe_buffer.hpp  probe_viewport.cpp  probe_viewport.hpp  probes.cpp  renderer.cpp  renderer.hpp
src/renderer/passes/: bloom.cpp  bloom.hpp  forward.cpp  forward.hpp  geometry.cpp  geometry.hpp  lighting.cpp  lighting.hpp  motion_blur.cpp  motion_blur.hpp  shadow.cpp  shadow.hpp  sharpen.cpp  sharpen.hpp  ssao.cpp  ssao.hpp  ssr.cpp  ssr.hpp  taa.cpp  taa.hpp  tone_map.cpp  tone_map.hpp  volumetric.cpp  volumetric.hpp
